[project]
name = "nac-validate"
version = "1.0.0"
description = "A CLI tool to perform syntactic and semantic validation of YAML files."
license = { text = "MPL-2.0" }
readme = "README.md"
authors = [
    { name = "Daniel Schmidt", email = "danischm@cisco.com" },
]
maintainers = [
    { name = "Daniel Schmidt", email = "danischm@cisco.com" },
]
requires-python = ">=3.10"
dependencies = [
    "nac-yaml~=1.0.0",
    "ruamel-yaml~=0.18.15",
    "typer~=0.17.3",
    "yamale~=6.0.0",
]

[project.urls]
homepage = "https://github.com/netascode/nac-validate"
repository = "https://github.com/netascode/nac-validate"
documentation = "https://github.com/netascode/nac-validate"

[project.scripts]
iac-validate = "nac_validate.cli.main:app"
nac-validate = "nac_validate.cli.main:app"

[project.optional-dependencies]
dev = [
    "ansible-core~=2.17.6",
    "pytest~=8.4.2",
    "pytest-cov~=6.2.1",
    "pytest-mock~=3.15.0",
]

[tool.coverage.run]
source = ["nac_validate"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstract", "except ImportError:"]
omit = ["*/__main__.py"]

[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
python_version = "3.10"
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false

[tool.pytest.ini_options]
markers = ["unit", "integration"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"